feat: expandir configurações do Next.js e aprimorar documentação do projeto
- Adicionadas otimizações de performance no next.config.mjs, incluindo modo estrito do React e configurações de compilador SWC.
- Atualizada a documentação do README.md para refletir as principais funcionalidades, stack tecnológica e instruções de instalação do portfólio.
- Melhorias no layout e na estrutura do projeto, incluindo novas seções e componentes para uma experiência de usuário mais rica.
- Implementadas animações e efeitos visuais para aprimorar a interatividade e a responsividade do site.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -37,5 +37,13 @@
     "success": "Message sent successfully! I'll get back to you soon.",
     "errorSending": "Error sending message. Please try again.",
     "tooManySubmissions": "Too many attempts. Please try again later."
+  },
+  "openToWork": {
+    "status": "Open to Work"
+  },
+  "cta": {
+    "workTogether": "Let's Work Together",
+    "viewWork": "View My Work",
+    "downloadResume": "Download Resume"
   }
 }
